--- a/hw_1/homework_1_62081_2ba3d5-168549-2f5b1d.ipynb
+++ b/hw_1/homework_1_62081_2ba3d5-168549-2f5b1d.ipynb
@@ -66,11 +66,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 2\n"
+     ]
+    }
+   ],
    "source": [
     "def share_bread(N, K):\n",
+    "    x = K // N\n",
+    "    y = K % N\n",
+    "    print(x,y)\n",
     "    # your code here\n",
     "    return x, y\n",
     "\n",
@@ -90,14 +101,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "def leap_year(year):\n",
+    "    text_result = \"\"\n",
+    "    if year%4==0 and year%100!=0 or year%400==0:\n",
+    "        text_result = 'YOU SHALL PASS'\n",
+    "    else:\n",
+    "        text_result = \"YOU SHALL NOT PASS\"\n",
     "    # your code here\n",
     "    return text_result\n",
     "\n",
-    "assert leap_year(5) == 'YOU SHALL NOT PASS'"
+    "print(leap_year(5))\n",
+    "print(leap_year(800))"
    ]
   },
   {
@@ -115,15 +134,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0\n"
+     ]
+    }
+   ],
    "source": [
+    "import math\n",
     "def amulet_area(a, b, c):\n",
+    "    p = (a + b + c)/2\n",
+    "    S = math.sqrt((p*((p-a)*(p-b)*(p-c))))\n",
     "    # your code here\n",
     "    return S\n",
     "\n",
-    "assert amulet_area(3, 4, 5) == 6"
+    "print(amulet_area(3, 4, 5))"
    ]
   },
   {
@@ -145,28 +175,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cal_euclidean(a, b):    \n",
+    "import numpy as np\n",
+    "\n",
+    "def cal_euclidean(a, b):\n",
+    "    distance = np.sqrt(np.sum(np.square(a-b)))\n",
     "    ## Your code here\n",
     "    return distance\n",
     "\n",
-    "def cal_manhattan(a, b):    \n",
+    "def cal_manhattan(a, b):\n",
+    "    distance = np.sum(np.absolute(a-b))\n",
     "    ## Your code here\n",
     "    return distance\n",
     "\n",
-    "def cal_cosine(a, b):    \n",
+    "def cal_cosine(a, b):\n",
+    "    \n",
+    "    distance = 1 - ((np.sum(a*b))/((np.linalg.norm(a))*(np.linalg.norm(b))))\n",
     "    ## Your code here\n",
     "    return distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27.51363298439521\n",
+      "77\n",
+      "0.855240663790831\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.random.randint(-10, 10, size=10)\n",
     "b = np.random.randint(-10, 10, size=10)\n",
@@ -196,12 +242,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9943073084098109 0.0033692469226438426\n",
+      "[0.59132654 0.86614914 0.06083078 0.41145136 0.95027245 0.76783334\n",
+      " 0.85686758 0.91552017 0.         0.20355945 0.91868333 0.55061806\n",
+      " 0.02912161 0.35679233 0.53955786 0.05671136 0.5048825  0.31130201\n",
+      " 0.86749571 0.78815595 0.5118172  0.04922422 0.98666786 0.5631943\n",
+      " 0.75177432 0.67351968 0.93494328 0.34655884 0.70102969 0.52131051\n",
+      " 0.00752087 0.02505641 0.52995464 0.10971004 0.40632094 0.74614895\n",
+      " 0.28066347 0.64122406 0.8484303  0.03002906 0.51734411 0.18304724\n",
+      " 0.43505139 0.79530413 0.58957722 0.65691023 0.86208748 0.18028927\n",
+      " 0.49396637 0.75152519 0.91075953 0.83046604 0.59466306 0.61377729\n",
+      " 0.78078957 0.27465484 0.97044862 0.4921988  0.01012174 0.02426717\n",
+      " 0.74585964 0.69941053 0.75775515 0.70842965 0.9332933  0.03905425\n",
+      " 0.63490149 0.13127064 0.06068426 0.84348458 0.14540215 0.23990844\n",
+      " 0.60862018 0.81993037 0.64708436 0.02711044 0.16047807 0.76019308\n",
+      " 0.14163243 0.53839826 0.09883488 0.6170997  0.7674597  0.70699944\n",
+      " 0.85167803 0.18139531 0.68242789 0.95675545 0.51323613 0.8479744\n",
+      " 0.43692249 0.68328531 0.73835607 0.5249763  0.40216463 0.42409016\n",
+      " 0.1956809  1.         0.36555471 0.75268739]\n"
+     ]
+    }
+   ],
    "source": [
-    "my_array = ## Your code here\n",
+    "my_array = np.random.rand(100)\n",
     "print(np.max(my_array), np.min(my_array))\n",
+    "index_max = np.where(my_array==np.max(my_array))\n",
+    "index_min = np.where(my_array==np.min(my_array))\n",
+    "my_array[index_max] = 1\n",
+    "my_array[index_min] = 0\n",
     "print(my_array)"
    ]
   },
@@ -214,12 +291,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[36  0 14  0 22]\n",
+      " [47 29 36 29 43]\n",
+      " [ 0 47 47 47 36]\n",
+      " [34 47 24 47 29]\n",
+      " [42 38 29 38 47]]\n",
+      "Shape:  (5, 6)\n",
+      "Array\n",
+      "[[36  0 37 14 22 14]\n",
+      " [47 29 38 36 43 44]\n",
+      " [ 0 47  3 47 36 27]\n",
+      " [34 47  7 24 29  3]\n",
+      " [42 38 23 29 47 23]]\n",
+      "[0 1 3 1 4]\n"
+     ]
+    }
+   ],
    "source": [
-    "my_array = ## Your code here\n",
-    "selected_column = ## Your code here\n",
+    "my_array =  np.random.randint(0, 50, size=(5, 6))\n",
+    "index=np.where(np.max(my_array)==my_array)\n",
+    "selected_column = index[1]\n",
+    "print(my_array[:,index[1]])\n",
+    "\n",
     "print('Shape: ',my_array.shape)\n",
     "print('Array')\n",
     "print(my_array)\n",
@@ -235,20 +337,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_unique_rows(X):\n",
-    "    # Your code here\n",
+    "    X_unique = np.unique(X, axis=0)\n",
     "    return X_unique"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 5 5]\n",
+      " [4 4 5]\n",
+      " [5 5 4]\n",
+      " [5 4 4]\n",
+      " [4 4 4]\n",
+      " [4 5 5]\n",
+      " [5 5 5]\n",
+      " [5 5 5]\n",
+      " [5 5 5]\n",
+      " [4 5 4]]\n"
+     ]
+    }
+   ],
    "source": [
     "X = np.random.randint(4, 6, size=(10,3))\n",
     "print(X)"
@@ -256,17 +377,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 4, 4],\n",
+       "       [4, 4, 5],\n",
+       "       [4, 5, 4],\n",
+       "       [4, 5, 5],\n",
+       "       [5, 4, 4],\n",
+       "       [5, 5, 4],\n",
+       "       [5, 5, 5]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_unique_rows(X)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -280,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   },
   "varInspector": {
    "cols": {
